--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     </style>
     <body>
     <h1><b>Web and Programming</b></h1>
-    <a href="file:///Users/jflowersbasecamp/projects/course_links/Web_and_programming.html">W.A.P</a>
+    <a href="course_links/Web_and_programming.html">W.A.P</a>
     <h1><b>Client Side Programming</b></h1>
-    <a href="file:///Users/jflowersbasecamp/projects/course_links/Client_side_programming.html">C.L.P</a>
+    <a href="course_links/Client_side_programming.html">C.L.P</a>
     <h1><b>Security Principles and Policies</b></h1>
-    <a href="file:///Users/jflowersbasecamp/projects/course_links/Security_principles_policies.html">S.P.P</a>
+    <a href="course_links/Security_principles_policies.html">S.P.P</a>
     <h1><b>Full Stack Development</b></h1>
-    <a href="file:///Users/jflowersbasecamp/projects/course_links/Full_stack_web_Dev.html">F.S.W.D</a>
+    <a href="course_links/Full_stack_web_Dev.html">F.S.W.D</a>
 
 
     
